Configured database initialization at startup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.application.name=wallet
-spring.datasource.url=jdbc:postgresql://localhost:3306/your_database_name
+spring.jpa.open-in-view=false
+spring.jpa.show-sql=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/logifuture?currentSchema=public
 spring.datasource.username=username
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
-
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.sql.init.mode=always
+spring.sql.init.platform=postgres
+spring.sql.init.schema-locations=classpath:schema.sql
+spring.sql.init.data-locations=classpath:data.sql
